removed useless styling and fixed alignment

--- a/src/assets/css/components/Header.module.css
+++ b/src/assets/css/components/Header.module.css
@@ -25,14 +25,15 @@
 
 .header {
     width: 100%;
-    display: flex;
     height: 100px;
     padding: 0 10px;
+    display: flex;
     align-items: center;
     top: 0;
     z-index: 100;
     position: sticky;
     background-color: white;
+    z-index: 1000;
 }
 
 .header .logo {
